# plaixt

./: .gitignore  Cargo.toml  README.md  flake.nix  plaixt.kdl  query
crates/plaixt/: Cargo.toml
crates/plaixt-core/: Cargo.toml
crates/plaixt/src/: config.rs  main.rs  parsing.rs  trustfall_plaixt.rs
crates/plaixt/src/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.graphql  tests.rs  vertex.rs
examples/: changelog.plrecs
examples/definitions/: changelog.pldef  file_test.pldef
src/: lib.rs
