[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "PLAIn teXT tools for your data"
license = "EUPL-1.2"

[workspace.dependencies]
kdl = "6.3.3"

[workspace.metadata.crane]
name = "plaixt"

